--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
   }
   
   .section-padding {
-    @apply py-20 px-6 md:px-12 lg:px-24;
+    @apply py-10 md:px-12 lg:px-24;
   }
 
   .btn-primary {
